# com.etendoerp.copilot.toolpack

./: .gitignore  .pre-commit-config.yaml  bitbucket-pipelines.yml  build.gradle  jenkinsExtraModules.txt  pyproject.toml  sonar-project.properties  tools_deps.toml
legal/: LEGAL.md
referencedata/standard/: SQL_Expert.xml
src-db/database/model/: excludeFilter.xml
src-db/database/sourcedata/: AD_ELEMENT.xml  AD_MESSAGE.xml  AD_MODULE.xml  AD_MODULE_DBPREFIX.xml  AD_MODULE_DEPENDENCY.xml  AD_PACKAGE.xml  ETAPI_OPENAPI_FLOW.xml  (+14 more)
tests/: test_api_call_tool.py  test_attach_file_tool.py  test_codbar_tool.py  test_code_run_tool.py  test_db_query_generator.py  test_etendo_sql_to_csv_tool.py  test_excel_ocr_tool.py  test_file_copy_tool.py  test_file_downloader_tool.py  test_google_drive_tool.py  test_memory_tool.py  test_ocr_advanced_tool.py  test_ocr_example_creator_tool.py  test_ocr_tool.py  test_pdf_to_images_tool.py  test_print_directory_tool.py  test_read_file_tool.py  test_send_email_tool.py  test_simple_ocr_tool.py  test_task_creator_tool.py  test_tavily_search_tool.py  test_template_tool.py  test_uncompress_tool.py  test_write_file_tool.py  test_write_tool.py
tools/: APICallTool.py  AttachFileTool.py  AudioTool.py  CodbarTool.py  CodeRunTool.py  DBQueryGenerator.py  DockerTool.py  EtendoSQLToCSVTool.py  ExcelOCRTool.py  FileCopyTool.py  FileDownloaderTool.py  GoogleDriveTool.py  GoogleServiceUtil.py  GoogleSpreadsheetsTool.py  LoadOAuthTokenTool.py  MemoryTool.py  OCRAdvancedTool.py  OCRExampleCreatorTool.py  OcrTool.py  PdfSplitterTool.py  PdfToImagesTool.py  PrintDirectoryTool.py  ReadFileTool.py  SalesInvoiceCreationTool.py  SendEmailTool.py  SimpleOcrTool.py  TaskCreatorTool.py  TavilySearchTool.py  TemplateTool.py  UncompressTool.py  WriteFileTool.py  XLSTool.py
tools/schemas/: __init__.py
(+10 files in other folders)
