[tool.poetry]
name = "com.etendoerp.copilot.toolpack"
version = "1.2.1"
description = ""
authors = ["sebastianbarrozo <sebastian.barrozo@etendo.software>"]
packages = [{include = "toolpack"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pydantic = "^2.2.1"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
langchain = "0.2.2"
toml = "^0.10.2"
packaging = "^23.2"
openai = "^1.31.1"
langchain-openai = "^0.1.8"
langchain-google-genai = "^1.0.5"
langchain-community = "^0.2.2"
langgraph = "^0.0.62"
grandalf = "^0.8"
aiosqlite = "^0.20.0"
tox = "^4.15.1"
setuptools = "^70.0.0"
ipython = "^8.25.0"
nest-asyncio = "^1.6.0"
pylint = "^3.2.5"

chromadb = "^0.5.5"
pymupdf = "^1.24.9"
langchain-core = "^0.2.29"
langsmith = "^0.1.99"
python-multipart = "^0.0.9"
[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ipython = "^8.14.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 110
exclude = '''
/(
    \.git
  | \.hg
  | \.sh
  | \.mypy_cache
  | \.venv
  | Dockerfile
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.ruff.isort]
known-third-party = ["copilot"]
